--- a/style.css
+++ b/style.css
@@ -1,53 +1,37 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: rgb(132, 153, 175);
+    background-color: red;
 }
 
-.img2 {
-    align-content: center;
-    width: 100vh;
+.gameContainer {
+    background-size: 100vw 100vh;
+    background-image: url(road.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
 }
 
-h1 {
-    color: white;
-    font-size: 70px;
-    text-shadow: rgb(31, 28, 28);
-    margin-top: 0%;
+.boy {
+    background-image: url(boy.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 233px;
+    height: 244px;
+    position: absolute;
+    bottom: 20%;
+    left: 3%;
 }
 
-.hed {
-    align-items: center;
-    align-content: center;
-    width: 100vh;
-    margin: 10px;
-    padding: 10px;
-    color: rgb(241, 243, 245);
-    background-color: rgb(5, 5, 49);
-}
-
-h3 {
-    font-size: xx-large;
-    text-align: center;
-}
-
-.letsparty {
-    text-align: center;
-}
-
-h2 {
-    font-size: 50px;
-    text-align: center;
-    margin-top: 0%;
-    padding-top: 0%;
-}
-
-.row {
-    border: 8px darkgreen;
-}
-
-.btn-primary {
-    background-color: darkorange;
-}
-
-.btn-primary:hover {
-    background-color: green;
+.obstacle {
+    background-image: url(car.png);
+    background-size: cover;
+    width: 600;
+    height: 400;
+    position: absolute;
+    right: 1%;
+    bottom: 3%;
 }
