--- a/style.css
+++ b/style.css
@@ -1,37 +1,73 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: rgb(43, 36, 6);
 }
 
-.gameContainer {
-    background-size: 100vw 100vh;
-    background-image: url(road.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+.face {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: #ffcd00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.boy {
-    background-image: url(boy.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 233px;
-    height: 244px;
+.face::before {
+    content: "";
     position: absolute;
-    bottom: 20%;
-    left: 3%;
+    top: 200px;
+    width: 150px;
+    height: 70px;
+    background: #926002;
+    border-bottom-left-radius: 70px;
+    border-bottom-right-radius: 70px;
+    transition: 0.05s;
 }
 
-.obstacle {
-    background-image: url(car.png);
-    background-size: cover;
-    width: 600;
-    height: 400;
+.face:hover:before {
+    top: 210px;
+    width: 150px;
+    height: 35px;
+    background: #1a1409;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.eyes {
+    position: relative;
+    top: -40px;
+    display: flex;
+}
+
+.eyes .eye {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    display: block;
+    background: #fff;
+    margin: 0 15px;
+    border-radius: 50%;
+}
+
+.eyes .eye::before {
+    content: "";
     position: absolute;
-    right: 1%;
-    bottom: 3%;
+    top: 50%;
+    left: 25px;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    background: black;
+    border-radius: 50%;
 }
